--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,4 +3,15 @@
 </h1>
 
 
-<%=link_to "Logout" , "/login"%>
+
+
+
+
+</br>
+ <%=link_to "Add an Event" , new_event_path %> </br></br>
+ <%=link_to "Show All Events" , events_path %> </br></br>
+
+
+
+
+<%=link_to "Logout" , "/login" %>
