--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <h3> Available Users</h3>
 
 <ul >
-  <% @user.each do |user| %>
+  <% @users.each do |user| %>
     <li>
       <%= user.user_name  %>
     </li>
