--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,8 @@
 <ul >
   <% @events.each do |event| %>
     <li>
-      <%= link_to event.event_description , event_path(event) %> <%= event.event_date  %>
+      <%= link_to event.event_description , event_path(event) %> <%= event.event_date  %> 
+      <%=link_to "Attend" , user_path(@user)%>
     </li>
   <% end %>
 </ul>
