Back buttons added to each web page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,5 +6,11 @@
       <%= link_to event.event_description , event_path(event) %> <%= event.event_date  %> 
       <%=link_to "Attend" , user_path(@user)%>
     </li>
-  <% end %>
+<%end %>
+
+</br></br></br>
+
+    <%=link_to "Back" , user_path(@user)%>
+
+
 </ul>
