--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,6 +7,10 @@
 <%= f.date_field :event_date %> </br> </br> 
 <%= f.label :event_description %>
 <%= f.text_area :event_description %> </br> </br> 
-<%= f.submit "Create"%></br></br>
+<%= f.submit "Create"%></br></br></br>
+
+
+
+<%=link_to "Back" , user_path(@user)%>
 
 <%end %> 
