--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,9 @@
 <h1>  <center> Index Page  </center> </h1>
-<h3> Available Users</h3>
-<ul >
+<h3> Available Users </h3>
+<ul>
   <% @users.each do |user| %>
-    <li>
-      <%= user.user_name  %>
-    </li>
+    <li> <%= user.user_name %> </li>
   <% end %>
 </ul>
-<%= link_to 'SignUp', new_user_path  %> </br>
-<%= link_to 'SignIn', "/login"  %>
-
+<%= link_to 'Signup', new_user_path %> </br>
+<%= link_to 'Login', login_path %>
