--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,67 +1,51 @@
-<h1>  <center> Show Page  </center> 
-<%= @user.user_name%>
-</h1> </center>
+<h1>  <center> Show Page </center> 
+<%= @user.user_name %> </center> </h1>
 <ul>
-	<li>  <%=link_to "Add an Event" , new_event_path %>  </li>
-	<li>  <%=link_to "Show All Events" , events_path %>  </li>
-	<% if session[:id] != nil %>
-  <li> <%=link_to "Logout", "/logout" , method: :DELETE %> </li>
-  <%end%>
+  <li>  <%= link_to "Add an Event", new_event_path %>  </li>
+  <li>  <%= link_to "Show All Events", events_path %>  </li>
+  <% if session[:id] != nil %>
+  <li> <%=link_to "Logout", logout_path, method: :DELETE %> </li>
+  <% end %>
 </ul>
 
 <h2> List of all events created by this user is: </h2>
-
-<ul >
+<ul>
   <% @user.events.each do |event| %>
-    <li>
-      <%= event.event_description  %> <%= event.event_date  %> 
-    </li>
+    <li> <%= event.event_description %> <%= event.event_date %> </li>
   <% end %>
 </ul>
  
- <h2> List of all events this user is going to attend: </h2>
-
-<ul >
+<h2> List of all events this user is going to attend: </h2>
+<ul>
   <% @user.attended_events.each do |a_event| %>
-    <li>
-      <%= a_event.event_description  %> <%= a_event.event_date %> 
-    </li>
+    <li> <%= a_event.event_description %> <%= a_event.event_date %> </li>
   <% end %>
 </ul>
 
 <h2> Past Events attended by user: </h2> 
-<ul >
+<ul>
   <% @past_events.each do |event| %>
-	<li>
-	<%= event.event_description  %> <%= event.event_date %>    
-    </li>
+  <li> <%= event.event_description %> <%= event.event_date %> </li>
   <% end %>
 </ul>
 
-<h2> UpComing Events user is going to attend: </h2>
-<ul >
+<h2> Upcoming Events user is going to attend: </h2>
+<ul>
   <% @upcoming_events.each do |event| %>
-   <li>
-	<%= event.event_description  %> <%= event.event_date %>    
-    </li>
+  <li> <%= event.event_description %> <%= event.event_date %> </li>
   <% end %>
 </ul>
 
 <h2>All Past Events: </h2>
-<ul >
+<ul>
   <% @past_events_all.each do |event| %>
-	<li>
-	<%= event.event_description  %> <%= event.event_date %>    
-    </li>
+  <li> <%= event.event_description %> <%= event.event_date %> </li>
   <% end %>
 </ul>
 
-<h2>All UpComing Events: </h2>
-<ul >
+<h2> All UpComing Events: </h2>
+<ul>
   <% @upcoming_events_all.each do |event| %>
-   <li>
-	<%= event.event_description  %> <%= event.event_date %>    
-    </li>
+  <li> <%= event.event_description %> <%= event.event_date %> </li>
   <% end %>
-</ul>
-</br>
+</ul> </br>
